# TidalPy

./: .gitignore  .gitmodules  .travis.yml  CHANGES.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DoxyFile  LICENSE.md  MANIFEST.in  NOTICE  README.md  Style.md  TODO  TODO.md  _build_tidalpy.py  additional_dependencies.txt  additional_dependencies_conda.txt  cartopy_requirements.txt  change_log.md  citation.cff  codemeta.json  conda_requirements.txt  cython_extensions.json  enviornment.yml  environment.yml  example_planet.cfg  git_requirements.txt  index.html  installing_julia.md  license.txt  meta.yaml  pyproject.toml  quick_install.py  readthedocs.yml  requirements.txt  roadmap.md  setup.py  sphinx_dependencies.txt  test.py  (+2 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_wheels_main_pypi.yml  build_wheels_test_pypi.yml  coverage.yml  draft-pdf.yml  main_tests.yml  make_joss_pdf.yml  pr_tests.yml  pr_tests_mac.yml  pr_tests_ubun.yml  pr_tests_win.yml  pr_window_test.yml  pr_window_test.yml.txt  publish.yml  push_tests.yml  push_tests_mac.yml  push_tests_ubun.yml  push_tests_win.yml  python-package.yml  sync_versions.yml
Active Research/: PlutoCharon_Tides_vs_OrbitalDistance_FunctionBased.ipynb  PlutoCharon_Tides_vs_OrbitalDistance_OOP.ipynb  PlutoCharon_TimeStudy.py
Benchmarks/: IC3.py  Multilayer - Roberts & Nimmo 2008.py  Multilayer - Tobie+2005 - Roberts & Nimmo 2008.py  Surface Mapping Comparison.ipynb  shooting method - liq method.py  shooting method IC.py  shooting method liq2.py  shooting method liq3.py  shooting method.py
Benchmarks & Performance/: Earth_LNs.ipynb  Multilayer - Tobie+2005 - Roberts & Nimmo 2008.py  RadialSolver Benchmarks.ipynb  Surface Mapping Comparison.ipynb
Benchmarks & Performance/Performance/: Multilayer tidal heating.ipynb  Voxel Volume Comparison and Convergence.ipynb
Benchmarks & Performance/RadialSolver/: Dynamic Stability.ipynb  Earth Love Numbers.ipynb  Guo+2004.csv  RadialSolver - Comparison to Tobie+ (2005) and Roberts & Nimmo (2008).ipynb  RadialSolver - Earth Love Numbers Benchmarks.ipynb  RadialSolver - General Benchmarks and Performance.ipynb  RadialSolver - Helper Performance.ipynb  RadialSolver Benchmarks.ipynb  Untitled.ipynb  (+1 more)
Cookbooks/: Beginner-1--PlanetBuild_OOP.ipynb  Beginner-2--ThermalExploration_OOP.ipynb  Beginner-3--EccentricityTruncation_Functional.ipynb  Beginner_PlanetLoad_OOP.py  Beginner_SecularCooling_OOP.py  Intermediate-1--RheologicalParameterExploration_Functional.ipynb  Intermediate-2--MultiLayer_Functional.ipynb  Intermediate_NSR-Tides_vs_OrbitalDistance_FunctionBased.ipynb  Intermediate_PlanetBuildTechniques_OOP.py  Intermediate_Tidal_Susceptibility_OOP.ipynb  Intermediate_Tides_vs_ViscosityShear_OOP.ipynb  RheologicalParameterExploration_Beginner3_HighLevelFunctional.ipynb  ThermalExploration_Beginner2_OOP.ipynb  Tides_vs_OrbitalDistance_FunctionBased.ipynb  Tides_vs_ViscosityShear_OOP.ipynb  heating_vs_distance_FunctionBased.ipynb  multilayer_testing.py
Cookbooks and Scripts/: Beginner_PlanetLoad_OOP.py  Beginner_SecularCooling_OOP.py  Intermediate_NSR-Tides_vs_OrbitalDistance_FunctionBased.ipynb  Intermediate_Tides_vs_ViscosityShear_OOP.ipynb  PlanetBuild_Beginner1_OOP.ipynb  RheologicalParameterExploration_Beginner3_HighLevelFunctional.ipynb  ThermalExploration_Beginner2_OOP.ipynb  integration.py  integration2.py  multilayer_testing.py  triton exploration.ipynb
Cookbooks_old/: Intermediate_NSR-Tides_vs_OrbitalDistance_FunctionBased.ipynb
Demos/: 1 - Build Planets.ipynb  2 - Thermal Exploration.ipynb  3 - Calculating Love Numbers.ipynb  4 - Eccentricity Truncations.ipynb  5 - Rheology Exploration.ipynb  6 - Multilayer Heating.ipynb  7 - Comparison of Tidal Modes.ipynb  8 - Love Number Sensitivity.ipynb  Beginner-1--PlanetBuild_OOP.ipynb  Beginner-2--ThermalExploration_OOP.ipynb  Beginner-3--EccentricityTruncation_Functional.ipynb  EncTest.py  Graphics--GridPlots.ipynb  Graphics--MapProjections.ipynb  Intermediate-1--RheologicalParameterExploration_Functional.ipynb  Intermediate-2--Calculate_Love_Numbers.ipynb  Intermediate-2--MultiLayer_Functional.ipynb  Intermediate-3--Comparison of Tidal Modes.ipynb  Intermediate-3--MultiLayer_Functional.ipynb  Intermediate-4--Comparison of Tidal Modes.ipynb  prem_data.csv
Derivations/: G Func Testing.ipynb  NSR - Potential-Based - Arb Inclin & Eccen - Libration.ipynb  NSR - Potential-Based - Arb Inclin & Eccen - Script.py  NSR - Potential-Based - Arb Inclin & Eccen.ipynb  NSR Tidal Dissipation - Potential-Based - Arbitrary Inclination and Eccentricity - Libration.ipynb  NSR Tidal Dissipation - Potential-Based - Arbitrary Inclination and Eccentricity.ipynb  testing.py
Documentation/: 1 - Getting Started.md  2_TidalPy_Configurations.md  3 - Contribute.md  Calculating Love Numbers with TidalPy.md  Class Structure.drawio  Common Gotchas and Troubleshooting.md  Exoplanets.md  Getting Started.md  Model Building.md  RadialSolver.drawio  Rheology.md  Style Guide.md  TidalPy Structure.drawio  Untitled Diagram.drawio  Using RadialSolver.md  conf.py  index.md  requirements.txt
MultiLayer/: multilayer_testing.py
Papers/: Renaud+2020 - Highly Eccentric Worlds.ipynb  Renaud+2020.ipynb
TNO/: sampling.py
Temp/: bm_planet_build.py
Testing/: integration_test.py  shear_visc_test.py  test_bm_planet_build.py  test_orbit_evolution.py
Tests/: Cython Testing.ipynb  Cython experiments.ipynb  Dynamic Array Test.ipynb  LinkedList Test.ipynb  PropMatrixTest.ipynb  RadialSolver Debug.ipynb  Untitled.ipynb  Untitled1.ipynb  model.md  segfault test.ipynb  test_tidalpy_package.py
TidalPy/: __init__.py  _version.py  cache.py  config_helpers.py  configurations.py  constants.pxd  constants.py  constants.pyx  constants_.hpp  constants_api.h  defaultc.py  exceptions.py  initialize.py  io.py  io_helper.py  layers.py  logger.py  logging.py  output.py  paths.py  performance.py  physical.py  thermal.py  types.py  version.py  version.txt
TidalPy-Run_20231107-1602/: TidalPy_Configs.toml
(+1324 files in other folders)
