[project]
name='TidalPy'
version = '0.4.1'
description='Planetary Tidal Evolution Software made with Python.'
authors= [
    {name = 'Joe P. Renaud', email = 'TidalPy@gmail.com'}
    ]
requires-python = ">=3.8,<3.11"
dependencies = [
    # Scientific and computing resources
    "numba>=0.54.1",
    "numpy>=1.22",
    "scipy>=1.9.3",
    # Configuration file resources
    "json5>=0.9.5",
    # Additional multiprocessing support resources
    "dill>=0.3.2",
    "psutil>=5.8.0",
    "pathos>=0.2.0",
    # Install Burnman requirements
    "burnman>=1.0.0",
    "pycddlib>=2.1",
    "cvxpy>=1.2.1",
    "ecos>=2.0.10",
    "autograd>=1.4",
    "scs>=3.2.0",
    # Install CyRK requirements
    "cyrk>=0.4.0"
]
license = {file = "LICENSE.md"}
readme = "README.md"
keywords = [
    "Scientific Computing",
    "Scientific Modeling",
    "Astrophysics",
    "Astronomy",
    "Planets",
    "Moons",
    "Exoplanets",
    "Planetary Science",
    "Planetary Interiors",
    "Orbital Dynamics",
    "Tides",
    "Tidal Dynamics",
    "Tidal Heating",
    "Numerical Integration"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
"Homepage" = "https://github.com/jrenaud90/TidalPy"
"Bug Tracker" = "https://github.com/jrenaud90/TidalPy/issues"

[project.optional-dependencies]
dev = [
    "jupyter",
    "cmcrameri>=1.4",
    "matplotlib>=3.4.2",
    "pytest",
    "timeit",
    "pandas>=1.2.4"
]

graphics = [
    "cmcrameri>=1.4",
    "matplotlib>=3.4.2",
    "ipympl>=0.8.7"
]

julia = [
    "julia>=0.5.7",
    "diffeqpy>=1.2.0"
]

cartopy = [
    "pyproj>=3.3.0",
    "shapely>=1.6.4,<=1.8.4",
    "pyshp>=2.1",
    "geos>=3.7.2",
    "cartopy>=0.18.0"
]

[build-system]
requires = [
    'setuptools>=64.0.0',
    'numpy>=1.22',
    'wheel>=0.38',
    'pip>=21.0.0',
    "numba>=0.54.1",
    "numpy>=1.22",
    "scipy>=1.9.3",
]
build-backend = "setuptools.build_meta"

# TODO: Get rid of the below once the numba-scipy package is updated. See the note in the module's folder.
[project.entry-points.numba_extensions]
init = "TidalPy.numba_scipy:_init_extension"

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
testpaths = [
    "Tests"
]

[tool.cibuildwheel]
build = "*"
