[project]
name='TidalPy'
version = '0.5.0a5.dev4'
description='Planetary Tidal Evolution Software made with Python.'
authors= [
    {name = 'Joe P. Renaud', email = 'TidalPy@gmail.com'}
    ]
requires-python = ">=3.8,<3.12"
dependencies = [
    # Scientific and computing resources
    "numba>=0.54.1",
    "numpy>=1.22",
    "scipy>=1.9.3",
    # Configuration file resources
    "json5>=0.9.5",
    # Additional multiprocessing support resources
    "dill>=0.3.2",
    "psutil>=5.8.0",
    "pathos>=0.2.0",
    # Install CyRK requirements
    "cyrk>=0.6.2"
]
license = {file = "LICENSE.md"}
readme = "README.md"
keywords = [
    "Scientific Computing",
    "Scientific Modeling",
    "Astrophysics",
    "Astronomy",
    "Planets",
    "Moons",
    "Exoplanets",
    "Planetary Science",
    "Planetary Interiors",
    "Orbital Dynamics",
    "Tides",
    "Tidal Dynamics",
    "Tidal Heating",
    "Numerical Integration"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
"Homepage" = "https://github.com/jrenaud90/TidalPy"
"Bug Tracker" = "https://github.com/jrenaud90/TidalPy/issues"

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
    "cmcrameri>=1.4",
    "matplotlib>=3.4.2",
    "palettable>=3.3.0",
    "ipympl>=0.8.7",
    "julia>=0.5.7",
    "diffeqpy>=1.2.0"
]

graphics = [
    "jupyter",
    "cmcrameri>=1.4",
    "matplotlib>=3.4.2",
    "palettable>=3.3.0",
    "ipympl>=0.8.7"
]

julia = [
    "julia>=0.5.7",
    "diffeqpy>=1.2.0"
]

cartopy = [
    "pyproj>=3.3.0",
    "shapely>=1.6.4,<=1.8.4",
    "pyshp>=2.1",
    "geos>=3.7.2",
    "cartopy>=0.18.0"
]

[build-system]
requires = [
    'setuptools>=64.0.0',
    'numpy>=1.22',
    'cython>=0.29.30',
    'wheel>=0.38',
    "cyrk>=0.6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["_build_tidalpy"]
include-package-data = true
#packages = []
#    "TidalPy",
#    "TidalPy.cooling",
#    "TidalPy.numba_scipy",
#    "TidalPy.numba_scipy.special",
#    "TidalPy.radial_solver",
#    "TidalPy.radial_solver.matrix",
#    "TidalPy.radial_solver.numerical",
#    "TidalPy.radial_solver.numerical.collapse",
#    "TidalPy.radial_solver.numerical.derivatives",
#    "TidalPy.radial_solver.numerical.initial",
#    "TidalPy.radial_solver.numerical.interfaces",
#    "TidalPy.radiogenics",
#    "TidalPy.rheology",
#    "TidalPy.rheology.complex_compliance",
#    "TidalPy.rheology.partial_melt",
#    "TidalPy.rheology.viscosity",
#    "TidalPy.stellar",
#    "TidalPy.structures",
#    "TidalPy.structures.helpers",
#    "TidalPy.structures.layers",
#    "TidalPy.structures.orbit",
#    "TidalPy.structures.world_builder",
#    "TidalPy.structures.world_types",
#    "TidalPy.tides",
#    "TidalPy.tides.ctl_funcs",
#    "TidalPy.tides.eccentricity_funcs",
#    "TidalPy.tides.inclination_funcs",
#    "TidalPy.tides.methods",
#    "TidalPy.tides.modes",
#    "TidalPy.tides.modes.mode_calc_helper",
#    "TidalPy.tides.multilayer",
#    "TidalPy.tides.potential",
#    "TidalPy.toolbox",
#    "TidalPy.utilities",
#    "TidalPy.utilities.classes",
#    "TidalPy.utilities.classes.config",
#    "TidalPy.utilities.classes.model",
#    "TidalPy.utilities.graphics",
#    "TidalPy.utilities.graphics.multilayer",
#    "TidalPy.utilities.integration",
#    "TidalPy.utilities.io",
#    "TidalPy.utilities.math",
#    "TidalPy.utilities.multiprocessing",
#    "TidalPy.utilities.numpy_helper",
#    "TidalPy.utilities.performance",
#    "TidalPy.utilities.performance.special",
#    "TidalPy.utilities.spherical_helper",
#    "TidalPy.utilities.string_helper",
#    "TidalPy.WorldConfigs"]

[tool.setuptools.cmdclass]
build_py = "_build_tidalpy.build_tidalpy"

[tool.setuptools.packages]
find = {}

# TODO: Get rid of the below once the numba-scipy package is updated. See the note in the module's folder.
[project.entry-points.numba_extensions]
init = "TidalPy.numba_scipy:_init_extension"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
testpaths = [
    "Tests"
]

[tool.cibuildwheel]
build = "*"
