[project]
name='TidalPy'
version = '0.6.5'
description='Tidal Dynamics and Thermal-Orbital Evolution Software Suite Implemented in Cython and Python'
authors= [ 
    {name = 'Joe P. Renaud', email = 'TidalPy@gmail.com'}
    ]
requires-python = ">=3.9,<3.14"
dependencies = [
    # Scientific and computing resources
    "numba>=0.54.1",
    "numpy>=1.22,<3",
    "scipy>=1.9.3",
    # Configuration file resources
    "platformdirs>=3.11.0",
    "toml>=0.10.2",
    # Additional multiprocessing support resources
    "dill>=0.3.2",
    "psutil>=5.8.0",
    "pathos>=0.2.0",
    # Install CyRK requirements
    "cyrk>=0.13.5,<0.14.0",
    # Exoplanet data archive
    "astropy",
    "astroquery",
    # Graphics
    "ipympl>=0.9.6,<0.10.0",
    "matplotlib>=3.4.2,<5.0.0",
    "cmcrameri"
]
license = "CC-BY-NC-SA-4.0"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
keywords = [
    "Scientific Computing",
    "Scientific Modeling",
    "Astrophysics",
    "Astronomy",
    "Planets",
    "Moons",
    "Exoplanets",
    "Planetary Science",
    "Planetary Interiors",
    "Orbital Dynamics",
    "Tides",
    "Tidal Dynamics",
    "Tidal Heating",
    "Numerical Integration"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Natural Language :: English"
]

[project.urls]
"Homepage" = "https://github.com/jrenaud90/TidalPy"
"Bug Tracker" = "https://github.com/jrenaud90/TidalPy/issues"

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
    "cmcrameri>=1.4, <2.0",
    "matplotlib>=3.4.2",
    "palettable>=3.3.0",
    "ipympl>=0.8.7",
    "julia>=0.5.7",
    "diffeqpy>=1.2.0"
]

# Reccomended (sometimes required) graphics packages
graphics = [
    "jupyter",
    "cmcrameri>=1.4,<2.0",
    "matplotlib>=3.4.2",
    "palettable>=3.3.0",
    "ipympl>=0.8.7"
]

# Extending installs
burnman = [
    "autograd",
    "burnman>=2.1.0, <3"
]

cartopy = [
    "cartopy>=0.22.0"
]

julia = [
    "julia>=0.5.7",
    "diffeqpy>=1.2.0"
]

[build-system]
requires = [
    'setuptools>=64.0.0',
    'numpy>=1.22,<3',
    "scipy>=1.9.3",
    'cython>=3.0.0',
    'wheel>=0.38',
    "cyrk>=0.13.5,<0.14.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["_build_tidalpy"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["Tests", ".vscode", ".idea", ".github", "Papers", "Demos", "Benchmarks & Performance", "Documentation"]

[tool.setuptools.cmdclass]
build_py = "_build_tidalpy.build_tidalpy"
build_ext = "_build_tidalpy.build_ext"

# TODO: Get rid of the below once the numba-scipy package is updated. See the note in the module's folder.
[project.entry-points.numba_extensions]
init = "TidalPy.numba_scipy:_init_extension"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
testpaths = [
    "Tests"
]

[tool.cibuildwheel]
build = "*"
# Disable building PyPy wheels on all platforms. Also having issue with musllinux.
skip = ["pp*", "*musl*"]
# Having issues with SciPy install during wheel build on 32-bit systems.
archs = ["auto64"]
